# iniFileManager

./: CMakeLists.txt  README.md  iniFileManager.cpp  iniFileManager.h  main.cpp
test/: CMakeLists.txt  runAllTest.cpp  test.cpp
